# Som-Lang

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  a.ml  error_explanations.yaml  fizzbuzz.idk  foo.ml  gen_codes_ml.py  idk.bnf  parsing_let_bindings.txt  session.vim  std.idk  test.c
docs/: book.toml  (+7 more)
somc/: Cargo.toml  README.md  dune-project
somc/lib/: README.md  dune  somc.ml
somc/lib/analysis/: analysis.ml  builtins.ml  canonicalize.ml  constant_fold.ml  context.ml  dune  import.ml  name_res.ml  name_resolution.ml  resolve.ml  scope.ml
somc/lib/codegen/: cmodule.ml  codegen.ml  context.ml  dune  emit.ml  mangle.ml  opt.ml  pass.ml  print.ml  target.ml  value.ml  write.ml
somc/lib/config/: cli.ml  config.ml  dune
somc/lib/configs/: cli.ml  configs.ml  dune
somc/lib/lambda/: apply.ml  closure.ml  dune  env.ml  ir.ml  lambda.ml  lifting.ml  lower.ml  matching.ml  matrix.ml  optimize.ml  print.ml  print_ir.ml  simplify.ml  uncurry.ml
somc/lib/malfunction/: ABOUT.md  README.md  dune  malfunction.ml  malfunction.mli  malfunction_compat.cppo.ml  malfunction_compiler.ml  malfunction_compiler.mli
somc/lib/parse/: README.md  ast.ml  control.ml  dune  grammar.ml  ident.ml  lexer.mll  parse.ml  parser.ml  parser.mly  print_ast.ml  span.ml  token.ml
somc/lib/pipeline/: dune  pipeline.ml
somc/lib/refine/: dune  import.ml  refine.ml
somc/lib/report/: codes.ml  dispatch.ml  dune  error.ml  report.ml  util.ml
somc/lib/span/: dune  loc.ml  span.ml
somc/lib/symbols/: dune  magic.ml  primitive.ml  symbols.ml
somc/lib/symboltable/: dune  ident.ml  symboltable.ml
somc/somc-codegen/: Cargo.toml
somc/somc-global/: Cargo.toml
somc/somc-lex/: Cargo.toml
somc/somc-parse/: Cargo.toml
somc/somc-report/: Cargo.toml
somc/somc-span/: Cargo.toml
somc/src/: lib.rs  main.rs
tools/language-server/: Makefile  dune-project
(+220 files in other folders)
