[package]
name = "somc"
version = "0.1.0"
edition = "2021"

[dependencies]
"somc-global" = { path = "./somc-global" }
"somc-lex" = { path = "./somc-lex" }
"somc-report" = { path = "./somc-report" }
"somc-span" = { path = "./somc-span" }
"somc-parse" = { path = "./somc-parse" }
"somc-codegen" = { path = "./somc-codegen" }