(lang dune 3.4)

(name somc)

(generate_opam_files false)

(source
 (github SjVer/Som-Lang))

(authors "Sjoerd Vermeulen")

(maintainers "Sjoerd Vermeulen")

(license MIT)

(documentation https://github.com/SjVer/Som-Lang)

(package
 (name somc)
 (synopsis "The official Som compiler")
 (description "The official Som compiler")
 (depends ocaml dune))
