[package]
name = "somc-global"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
clap = { version = "3.1.17", default-features = false, features = ["std", "suggestions", "derive", "env"] }